@@ -1,6 +1,8 @@
 Version 1.9.8
 - BUG: GDI leak in repobrowser. (Stefan)
 - BUG: Endless loop in vendor-branch. (Stefan)
+- CHG: New line margin icons and minor high dpi refinements
+       in TortoiseMerge. (Ivan Zhakov)
 
 Version 1.9.7
 - BUG: Drag copy-and-add did not add auto-properties. (Stefan)
